tests/snapshots/test_examples__fail__relations.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: assertion failure
   ┌─ examples/fail/relations.fly:13:1
   │
13 │ assert forall a:A b:A. q(a, b) -> a = b
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     Model { signature: Signature { sorts: [Id("A")], relations: [RelationDecl { mutable: false, name: "p", args: [Id("A")], typ: Bool }, RelationDecl { mutable: false, name: "q", args: [Id("A"), Id("A")], typ: Bool }, RelationDecl { mutable: false, name: "a0", args: [], typ: Id("A") }] }, universe: [4], interp: [Interpretation { shape: [4, 2], data: [0, 0, 0, 0] }, Interpretation { shape: [4, 4, 2], data: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] }, Interpretation { shape: [4], data: [0] }] }


