tests/snapshots/test_examples__fail__safety1_ind.fly.cvc5.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/safety1_ind.fly:10:1
   │
10 │ assert always !p
   │ ^^^^^^^^^^^^^^^^
   │
   = counter example:
     p = false
     q = true


