tests/snapshots/test_examples__fail__safety1_ind.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: invariant is not inductive
   ┌─ examples/fail/safety1_ind.fly:10:1
   │
10 │ assert always !p
   │ ^^^^^^^^^^^^^^^^
   │
   = counter example:
     Model { signature: Signature { sorts: [], relations: [RelationDecl { mutable: true, name: "p", args: [], typ: Bool }, RelationDecl { mutable: true, name: "q", args: [], typ: Bool }] }, universe: [], interp: [Interpretation { shape: [2], data: [0] }, Interpretation { shape: [2], data: [1] }] }


