tests/snapshots/test_examples__fail__safety1_init.fly.cvc4.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: init does not imply invariant
   ┌─ tests/examples/fail/safety1_init.fly:10:1
   │
10 │ assert always !p & !q
   │ ^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     p = true
     q = false


