tests/snapshots/test_examples__fail__safety1_init.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: init does not imply invariant
   ┌─ examples/fail/safety1_init.fly:10:1
   │
10 │ assert always !p & !q
   │ ^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     Model { signature: Signature { sorts: [], relations: [RelationDecl { mutable: true, name: "p", args: [], typ: Bool }, RelationDecl { mutable: true, name: "q", args: [], typ: Bool }] }, universe: [], interp: [Interpretation { shape: [2], data: [0] }, Interpretation { shape: [2], data: [0] }] }


