tests/snapshots/test_examples__fail__safety1_proof_invariants.fly.cvc4.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: init does not imply invariant
  ┌─ examples/fail/safety1_proof_invariants.fly:9:1
  │
9 │ assert always !p
  │ ^^^^^^^^^^^^^^^^
  │
  = counter example:
    p = false
    q = false


